@@ -4,6 +4,12 @@ support for RasterQuad (4 dimensional) objects
 add equivalent to "subsWithNA" to reclassify
 move resample (bilenear interp. (and add other options)) and rasterize/(lines, polygons) to C
 
+--- development version
+Removed bugs from 'f8' in the writing functions vignette (reported by J. R. Matchett)
+Removed bug that occured when creating stack from list of ascii files
+Removed support for big.matrix to store raster data (because currently the bigmemory package is not available on windows) 
+aggregate now allows aggregation to be 1 in one dimension 
+
 --- 10-March-2013, version: 2.1-10
 replacement with multi-layer object now works as expected (problem reported by Julian Zeidler)
 replacing a logical value in a RasterLayer previously changed the data type to numeric
